# DetectivePotty

./: .gitignore  AGENTS.md  README.md  config.example.yaml  config.multiFile.yaml  config.singleFile.yaml  config.yaml  pyproject.toml
configs/: baseline.yaml
docs/: ARCHITECTURE.md
src/detectivepotty/: __init__.py  cli.py  cli_common.py  cli_detect.py  cli_export.py  cli_harvest.py  config.py  dataset_export.py  device.py  events.py  geometry.py  harvest.py  harvest_scan.py  harvest_spans.py  harvest_unvr.py  harvest_writer.py  labels.py  pipeline.py  pipeline_file.py  pipeline_live.py  pipeline_recording.py  pipeline_runtime.py  potty_event.py  preview.py  timeline.py  tracking.py  video_encode.py
src/detectivepotty/classify/: __init__.py  base.py  heuristic.py  pose.py
src/detectivepotty/detect/: __init__.py  coreml_export.py  yolo.py
src/detectivepotty/experiment/: __init__.py  bakeoff.py  groundtruth.py  motion.py  timeline.py
src/detectivepotty/pose/: __init__.py  base.py  factory.py  features.py  gate.py  keypoints.py  superanimal.py  telemetry.py
src/detectivepotty/protect/: __init__.py  client.py  trigger.py  (+1 more)
tests/: test_cleanup_legacy.py  test_cli.py  test_clip_writer.py  test_config.py  test_coreml_export.py  test_curl_download.py  test_dataset_export.py  test_dataset_layout.py  test_device.py  test_experiment.py  test_geometry.py  test_harvest.py  test_harvest_unvr.py  test_heuristic_classifier.py  test_integration.py  test_labeling.py  test_labels.py  test_pipeline.py  test_pipeline_batching.py  test_pose_classifier.py  test_pose_estimator.py  test_pose_factory.py  test_pose_features.py  test_pose_gate.py  test_pose_keypoints.py  test_pose_overlay.py  test_pose_superanimal.py  test_pose_telemetry.py  test_potty_event.py  test_potty_event_pose_gate.py  test_prefetch.py  test_preview.py  test_protect_client.py  test_protect_trigger.py  test_pyav_capture.py  test_reconcile.py  test_recorder.py  test_retention.py  test_rolling_buffer.py  test_sources.py  (+8 more)
(+80 files in other folders)
