[project]
name = "detectivepotty"
version = "0.1.0"
description = "Real-time dog potty detection from security cameras"
authors = [
    { name = "yxbh", email = "3335392+yxbh@users.noreply.github.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "numpy>=2.4.6",
    "opencv-python>=4.13.0.92",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "typer>=0.26.7",
    "uiprotect>=11.6.0",
    "ultralytics>=8.4.60",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
detectivepotty = "detectivepotty.cli:app"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
